# godot-rust-cross-compiler

./: .gitignore  .gitlab-ci.yml  .travis-ci.yml  .travis.yml  ChangeLog  LICENSE.txt  Makefile  README.md  grcc.mk
docker/: Dockerfile  README.md  build.sh  push.sh  run.sh
godot/: cctoy.gdnlib  export_presets.cfg  project.godot
godot/.import/: icon.png-487276ed1e3a0c39cad0279d744ee560.md5  icon.png-487276ed1e3a0c39cad0279d744ee560.stex
godot/fonts/: big_font.tres
godot/scenes/: main_scene.tscn
godot/scripts/: exit_button.gd  msg_label.gdns
rust/: Cargo.toml
rust/cctoy/: Cargo.toml
rust/cctoy/src/: lib.rs
rust/purelib/: Cargo.toml
rust/purelib/src/: lib.rs
rust/withgdnative/: Cargo.toml
rust/withgdnative/src/: lib.rs
